fixed order details
